feat: add debounce functionality on cart and update styles

--- a/projects/client/src/locales/en/translation.json
+++ b/projects/client/src/locales/en/translation.json
@@ -59,6 +59,8 @@
     "title": "Cart",
     "selectAll": "Select All",
     "remove": "Remove",
+    "size": "Size",
+    "subTotal": "Subtotal",
     "summary": {
       "title": "Shopping Summary",
       "total": "Total Price",
