feat: Use React Helmet to change page title

--- a/projects/client/src/locales/en/translation.json
+++ b/projects/client/src/locales/en/translation.json
@@ -18,6 +18,7 @@
     }
   },
   "homepage": {
+    "title": "Homepage | TOTEN",
     "title1": "popular category",
     "sub1": "see all category",
     "sub2": "see all",
