feat: Remove geolocation from address and fix product details bugs
- Removed geolocation feature from user address
- Fixed bugs in product details recommendations

--- a/projects/client/src/locales/en/translation.json
+++ b/projects/client/src/locales/en/translation.json
@@ -154,7 +154,7 @@
     }
   },
   "checkoutPage": {
-    "header": "Chekout",
+    "header": "Checkout",
     "main": "Main",
     "shipping": "Shipping Address",
     "addressBtn": "Choose Other Address",
