--- a/projects/client/src/locales/jp/translation.json
+++ b/projects/client/src/locales/jp/translation.json
@@ -13,7 +13,7 @@
     },
     "profile": {
       "setting": "設定",
-      "dashboard": "管理者ダッシュボード",
+      "dashboard": "ダッシュボード",
       "logout": "ログアウト"
     }
   },
