--- a/projects/client/src/locales/en/translation.json
+++ b/projects/client/src/locales/en/translation.json
@@ -70,7 +70,7 @@
       "removeFromWishlist": "Remove From Wishlist"
     },
     "misc": {
-      "title": "Other products from this category",
+      "title": "Other products from the same category",
       "sub": "See More",
       "noProduct": "no similar category product",
       "noProductLink": "check our other product's"
