--- a/projects/client/src/locales/jp/translation.json
+++ b/projects/client/src/locales/jp/translation.json
@@ -46,8 +46,8 @@
       "sub": "選択",
       "select1": "注目の製品",
       "select2": "新着",
-      "select3": "価格の低い順",
-      "select4": "価格の高い順",
+      "select3": "価格（低から高）",
+      "select4": "価格（高から低）",
       "select5": "最高評価"
     }
   },
