feat(checkout): Add weight limit to checkout process

--- a/projects/client/src/locales/en/translation.json
+++ b/projects/client/src/locales/en/translation.json
@@ -21,7 +21,7 @@
     "title1": "popular category",
     "sub1": "see all category",
     "sub2": "see all",
-    "title2": "top seller this month",
+    "title2": "Highest Selling Products",
     "title3": "try our newest products"
   },
   "profileSettingsPage": {
