--- a/projects/client/src/locales/id/translation.json
+++ b/projects/client/src/locales/id/translation.json
@@ -21,7 +21,7 @@
     "title1": "kategori terpopuler",
     "sub1": "lihat semua kategori",
     "sub2": "lihat semua",
-    "title2": "terlaris bulan ini",
+    "title2": "Produk Terlaris",
     "title3": "coba product terbaru kami"
   },
   "profileSettingsPage": {
