--- a/projects/client/src/locales/jp/translation.json
+++ b/projects/client/src/locales/jp/translation.json
@@ -21,7 +21,7 @@
     "title1": "人気のカテゴリー",
     "sub1": "すべてのカテゴリーを見る",
     "sub2": "すべて見る",
-    "title2": "今月のトップセラー",
+    "title2": "最も売れている製品",
     "title3": "最新の商品を試してみてください"
   },
   "profileSettingsPage": {
