--- a/projects/client/src/locales/jp/translation.json
+++ b/projects/client/src/locales/jp/translation.json
@@ -228,7 +228,13 @@
         "notes": "宅配便への注意（任意）",
         "notesDesc": "家の色、基準、特別なメッセージなど。",
         "makeMain": "メインの住所にする",
-        "tos": "Totenの住所設定の<1>利用規約</1>および<1>プライバシーポリシー</1>に同意します。",
+        "tos": {
+          "tos1": "私は同意します",
+          "tos2": "利用規約",
+          "tos3": "および",
+          "tos4": "プライバシーポリシー",
+          "tos5": "Totenの住所設定。"
+        },
         "submitBtn": "送信"
       },
       "modify": {
